js/js.translator/testData/incremental/invalidation/interfaceOpenMethods/lib1/InterfaceA.1.kt
interface A {
    fun testA1() = 2

    fun testA2() = 1
}
